Applied config to initialize the database and data